--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config":{
+        "maxLamdaSize":"15mb",
+        "runtime":"python3.11"
+      }
     },
     {
       "src": "static/**/*",
